Reorganized applicants admin page

--- a/app/admin/templates/applications.html
+++ b/app/admin/templates/applications.html
@@ -5,109 +5,143 @@
 {% block content %}
     <div class="content">
         <div class="container-fluid">
-            <div class="card">
-                <div class="card-header" data-background-color="purple">
-                    <h4 class="title">Applicant Manager</h4>
-                    <p class="category">Brought to you by the one and only
-                        <a target="_blank" href="https://www.randydeng.com">Randy Deng</a>
-                    </p>
-                </div>
-                <div class="card-content">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h5>Current Semester Control Panel</h5>
-                            <a href=applications/{{ query_current_all }}>
-                                <div class="applications applications-info">
-                                    <span>All Applicants</span>
-                                </div>
-                            </a>
-                            <a href=applications/{{ query_current_accepted }}>
-                                <div class="applications applications-success">
-                                    <span>Accepted Applicants</span>
-                                </div>
-                            </a>
-                            <a href=applications/{{ query_current_remaining }}>
-                                <div class="applications applications-warning">
-                                    <span>Remaining Applicants</span>
-                                </div>
-                            </a>
-                            <a href=applications/{{ query_current_rejected }}>
-                                <div class="applications applications-danger">
-                                    <span>Rejected Applicants</span>
-                                </div>
-                            </a>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header" data-background-color="purple">
+                        <h4 class="title">Applicant Manager</h4>
+                        <p class="category">Handle your applicants like a pro!
+                        </p>
+                    </div>
+                    <div class="card-content">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a href=applications/{{ query_current_all }}>
+                                    <div class="applications applications-info">
+                                        <span>All Applicants</span>
+                                    </div>
+                                </a>
+                                <a href=applications/{{ query_current_accepted }}>
+                                    <div class="applications applications-success">
+                                        <span>Accepted Applicants</span>
+                                    </div>
+                                </a>
+                                <a href=applications/{{ query_current_remaining }}>
+                                    <div class="applications applications-warning">
+                                        <span>Remaining Applicants</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-md-6">
+                                <a href=applications/{{ query_all_unverified }}>
+                                    <div class="applications applications-info">
+                                        <span>Unverified Applicants</span>
+                                    </div>
+                                </a>
+                                <a href=applications/{{ query_current_rejected }}>
+                                    <div class="applications applications-danger">
+                                        <span>Rejected Applicants</span>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <h5 style='visibility:hidden'>.</h5>
-                            <a href=applications/{{ query_all_unverified }}>
-                                <div class="applications applications-info">
-                                    <span>Unverified Applicants</span>
-                                </div>
-                            </a>
-                            <a href=#>
-                                <div class="applications applications-success">
-                                    <span>Interview Scheduler</span>
-                                </div>
-                            </a>
-                            <a href=applications/{{ query_current_special }}>
-                                <div class="applications applications-warning">
-                                    <span>Special Applicants</span>
-                                </div>
-                            </a>
-                            <a href=#>
-                                <div class="applications applications-danger">
-                                    <span>Applicants with Multiple Applications</span>
-                                </div>
-                            </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-header" data-background-color="purple">
+                        <h4 class="title">Applicant Toolbox</h4>
+                        <p class="category">Tools to help smooth the application process!
+                        </p>
+                    </div>
+                    <div class="card-content">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <a href=#>
+                                    <div class="applications applications-success">
+                                        <span>Interview Scheduler</span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-md-6">
+                                <a href=#>
+                                    <div class="applications applications-danger">
+                                        <span>Flagged Applicants</span>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
+    <div class="content">
         <div class="container-fluid">
-            <div class="card">
-                <div class="card-header" data-background-color="purple">
-                    <h4 class="title">Admin Statistics and Tools</h4>
-                    <p class="category">A toolkit for the advanced features</p>
-                </div>
-                <div class="card-content">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <h5>Application Statistics</h5>
-                            <a href=interviews/{{ query_current_all }}>
-                                <div class="applications applications-info">
-                                    <span>Application History</span>
-                                </div>
-                            </a>
-                            <a href=interviews/{{ query_current_accepted }}>
-                                <div class="applications applications-success">
-                                    <span>Overview</span>
-                                </div>
-                            </a>
-                            <a href=interviews/{{ query_current_rejected }}>
-                                <div class="applications applications-danger">
-                                    <span>Overview</span>
-                                </div>
-                            </a>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header" data-background-color="purple">
+                        <h4 class="title">Historical Data</h4>
+                        <p class="category">Keep track of your history!</p>
+                    </div>
+                    <div class="card-content">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <a href=interviews/{{ query_current_all }}>
+                                    <div class="applications applications-info">
+                                        <span>Application History</span>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <h5>Admin Toolkit</h5>
-                            <a href=#>
-                                <div class="applications applications-info">
-                                    <span>Admissions Graphs</span>
-                                </div>
-                            </a>
-                            <a href=#>
-                                <div class="applications applications-success">
-                                    <span>Number Crunching</span>
-                                </div>
-                            </a>
-                            <a href=#>
-                                <div class="applications applications-danger">
-                                    <span>Overview</span>
-                                </div>
-                            </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header" data-background-color="purple">
+                        <h4 class="title">Statistics</h4>
+                        <p class="category">Math makes the world go round</p>
+                    </div>
+                    <div class="card-content">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <a href=#>
+                                    <div class="applications applications-info">
+                                        <span>Admissions Graphs</span>
+                                    </div>
+                                </a>
+                                <a href=#>
+                                    <div class="applications applications-success">
+                                        <span>Number Crunching</span>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <div class="card-header" data-background-color="purple">
+                        <h4 class="title">Fun Facts</h4>
+                        <p class="category">Sometimes, you just gotta know the little details</p>
+                    </div>
+                    <div class="card-content">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <a href=interviews/{{ query_current_all }}>
+                                    <div class="applications applications-info">
+                                        <span>Fun fact page 1</span>
+                                    </div>
+                                </a>
+                                <a href=#>
+                                    <div class="applications applications-success">
+                                        <span>Fun fact page 2</span>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
