Fixed drop down bug and modified css

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -13,7 +13,6 @@
         <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
         <!-- Fonts and icons -->
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-        <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
     <!--  Theme CSS  -->
     <link href="/static/css/freelancer.css" rel="stylesheet" />
     <link href="/static/css/fade.min.css" rel="stylesheet" />
@@ -58,7 +57,7 @@
     </nav>
 
     <!--  Header  -->
-    <header class="header" id="top">
+    <header class="header main_background" id="top">
         <div class="text-vertical-center">
             <div class ="intro-text">
             <div class="name">
@@ -85,6 +84,12 @@
         </div>
             </div>
     </header>
+
+    <!--  jQuery  -->
+    <script src="static/js/jquery-3.2.1.min.js"></script>
+
+    <!--  Bootstrap JavaScript  -->
+    <script src="static/js/bootstrap.min.js"></script>
 
 </body>
 
