--- a/app/static/css/freelancer.css
+++ b/app/static/css/freelancer.css
@@ -21,7 +21,7 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-    color: #0066CD;
+    color: #f499ff;
 }
 
 h1,
@@ -224,186 +224,7 @@ header .intro-text .skills {
         font-size: 1.5em;
     }
 }
-/********************** Sections in Website **********************/
 
-section {
-    padding: 50px 0;
-}
-
-section h2 {
-    margin: 0;
-    font-size: 2.5em;
-}
-
-section h3.bracket {
-    margin: 0 0 0.7em 0;
-    font-size: 2em;
-    text-transform: capitalize;
-}
-
-section.project {
-    text-align: center;
-    background: rgba(255, 255, 255, 1);
-}
-
-section.project2 {
-    text-align: center;
-    background: rgba(255, 255, 255, 0.9);
-}
-
-section.header {
-    text-align: center;
-    color: white;
-    background-image: url("../img/mainBG.png");
-    background-position: 50% 10%;
-    padding-top: 200px;
-    padding-bottom: 130px;
-}
-
-section.header h3 {
-    font-size: 3em;
-    text-decoration: bold;
-}
-
-section.success {
-    color: white;
-}
-
-@media (max-width: 500px) {
-    section {
-        padding: 50px 0;
-    }
-    section.header {
-        padding-top: 150px;
-    }
-}
-/********************** Portfolio Items ****************************/
-
-#portfolio .portfolio-item {
-    margin: 0 0 15px;
-    right: 0;
-    display: block;
-    position: relative;
-    max-width: 350px;
-    margin: 0 auto;
-}
-
-#portfolio .portfolio-text {
-    text-align: left;
-}
-
-#portfolio .portfolio-text .title {
-    font-size: 1.6em;
-}
-
-#portfolio .portfolio-text .date {
-    font-size: 1.1em;
-    color: green;
-    font-weight: bold;
-}
-
-#portfolio .portfolio-text .location {
-    font-size: 1em;
-    color: black;
-    font-weight: bold;
-}
-
-#portfolio .portfolio-text .description {
-    font-size: 1em;
-    color: black;
-}
-
-#portfolio .about-text {
-    text-align: left;
-}
-
-#portfolio .about-text .title {
-    color: #709DCC;
-    font-size: 3em;
-}
-
-#portfolio .about-text li {
-    text-align: left;
-    color: black;
-    font-size: 1.5em;
-}
-
-#portfolio .center {
-    width: 30em;
-    margin: 0 auto;
-    text-align: left;
-}
-
-#portfolio .profile-spacing {
-    margin-right: -2.5em;
-    margin-left: 4em;
-}
-
-@media screen and (min-width: 767px) and (max-width: 993px) {
-    #portfolio .profile-spacing {
-        margin-right: 2.5em;
-        margin-left: 1em;
-    }
-}
-
-@media screen and (max-width: 767px) {
-    #portfolio .portfolio-text {
-        text-align: center;
-        margin-left: 1em;
-        margin-right: 1em;
-    }
-    #portfolio .center {
-        width: 30em;
-        margin-left: -2em;
-        text-align: left;
-    }
-    #portfolio .about-text {
-        text-align: center;
-    }
-    #portfolio .about-text .title {
-        text-align: center;
-    }
-    #portfolio .profile-spacing {
-        display: block;
-        margin: 0 auto;
-    }
-    #portfolio .about-text ul,
-    #portfolio .about-text li {
-        text-align: left;
-        margin-left: 1em;
-    }
-}
-/******************* Gallery ***********************/
-
-div.gallery {
-    float: left;
-}
-
-div.gallery-center {
-    text-align: center;
-}
-
-div.gallery:hover {
-    opacity: 1;
-}
-
-img.gallery {
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 3px;
-    width: 20em;
-    height: 20em;
-    background-position: center center;
-    background-repeat: no-repeat;
-    object-fit: cover;
-}
-
-.gallery-text {
-    font-size: 1.2em;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
 /******************* Lines and Social Media ***********************/
 
 hr.fancylight {
