--- a/app/templates/errors/404.html
+++ b/app/templates/errors/404.html
@@ -1,1 +1,79 @@
-404 error
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+        <link rel="apple-touch-icon" sizes="76x76" href="/static/img/hive_logo.png" />
+        <link rel="icon" type="image/png" href="/static/img/hive_logo.png" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        <title>The Hive: Interview Scheduler</title>
+        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+        <meta name="viewport" content="width=device-width" />
+        <!-- Bootstrap core CSS -->
+        <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+        <!-- Fonts and icons -->
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+    <!--  Theme CSS  -->
+    <link href="/static/css/freelancer.css" rel="stylesheet" />
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+</head>
+
+<body id="page-top">
+
+    <!--  Navigation  -->
+    <nav id="mainNav" class="navbar navbar-fixed-top navbar-custom affix-top">
+        <div class="container">
+            <!--  Brand and toggle get grouped for better mobile display  -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href="/">
+                    <span itemprop="The Hive" itemscope itemtype="http://schema.org/Person">
+                        <span>The Hive</span>
+                    </span>
+                </a>
+            </div>
+
+            <!--  Collect the nav links, forms, and other content for toggling  -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="page-scroll">
+                        <a href="/login/user">Register</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="/static/files/interview_scheduler_manual.pdf">Help</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!--  Header  -->
+    <header class="header error_background" id="top">
+        <div class="text-vertical-center">
+            <div class ="intro-text">
+            <div class="name">
+                Oh no, looks like you found a <strong>bee</strong> in The Hive!</div>
+            <h1 class="light">
+            	You can <a href="mailto:hive@ece.gatech.edu?subject=Hive%20Bug%20Report">email</a> us your issue or head back to the <a href='/'> home page</a>
+            </h1>
+            </div>
+    </header>
+
+    <!--  jQuery  -->
+    <script src="static/js/jquery-3.2.1.min.js"></script>
+
+    <!--  Bootstrap JavaScript  -->
+    <script src="static/js/bootstrap.min.js"></script>
+
+</body>
+
+</html>
