--- a/app/admin/templates/applications_query_unverified_list.html
+++ b/app/admin/templates/applications_query_unverified_list.html
@@ -8,7 +8,7 @@
             <div class="card">
                 <div class="card-header" data-background-color={{ color }}>
                     <h4 class="title">{{ title }}</h4>
-                    <p class="category">Applicants are not shown in any particular order.</p>
+                    <p class="category">Unverified Applicants are people who only filled out the initial form, but not the one emailed to them</p>
                 </div>
                 <div class="card-content table-responsive">
                     <table class="table table-hover">
