--- a/app/admin/templates/control_panel.html
+++ b/app/admin/templates/control_panel.html
@@ -21,6 +21,7 @@
                 </div>
                 <div class="card-content">
                     <form method="POST" action="{{ url_for('admin.control_panel') }}">
+                        {{ password_form.hidden_tag() }}
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group label-floating">
