Fixed admin interview scheduler link to send form to interview scheduler

--- a/app/admin/templates/interview_scheduler.html
+++ b/app/admin/templates/interview_scheduler.html
@@ -15,7 +15,7 @@
                     <div class="card-content">
                         <div class="row">
                             <div class="col-md-12">
-                                <form method="POST" action="{{ url_for('admin') }}">
+                                <form method="POST" action="{{ url_for('admin.interview_scheduler') }}">
 
                                 </form>
                                 <a href=applications/{{ query_current_all }}>
