Change color of applicant tab on admin and user views based on if applicant is rejected, accepted, or pending

--- a/app/user/templates/user_dashboard.html
+++ b/app/user/templates/user_dashboard.html
@@ -6,7 +6,13 @@
     <div class="row">
         <div class="col-md-6">
             <div class="card">
-                <div class="card-header" data-background-color="purple">
+                {% if 'REJECTION' in applicant.status %}
+                    <div class="card-header" data-background-color="red">
+                {% elif 'ACCEPTANCE' in applicant.status %}
+                    <div class="card-header" data-background-color="green">
+                {% else %}
+                    <div class="card-header" data-background-color="orange">
+                {% endif %}
                     <h4 class="title">Your Profile</h4>
                     <p class="category">Basic information about you and your application!
                     </p>
