--- a/app/admin/templates/applications_applicant.html
+++ b/app/admin/templates/applications_applicant.html
@@ -6,7 +6,13 @@
     <div class="content">
         <div class="container-fluid">
             <div class="card">
-                <div class="card-header" data-background-color={{ color }}>
+                {% if 'REJECTION' in applicant.status %}
+                    <div class="card-header" data-background-color="red">
+                {% elif 'ACCEPTANCE' in applicant.status %}
+                    <div class="card-header" data-background-color="green">
+                {% else %}
+                    <div class="card-header" data-background-color="orange">
+                {% endif %}
                     <h4 class="title">Basic Information: {{ applicant.first_name }} {{ applicant.last_name }}</h4>
                     <p class="category">This section contains information relevant for all positions in The Hive</p>
                 </div>
