Fixed conflict with interviewscheduler name:

--- a/app/admin/templates/applications.html
+++ b/app/admin/templates/applications.html
@@ -57,7 +57,7 @@
                     <div class="card-content">
                         <div class="row">
                             <div class="col-md-6">
-                                <a href="{{ url_for('admin.interview_scheduler') }}">
+                                <a href="{{ url_for('admin.interviewscheduler') }}">
                                     <div class="applications applications-success">
                                         <span>Interview Scheduler</span>
                                     </div>
