--- a/app/admin/templates/interview_scheduler.html
+++ b/app/admin/templates/interview_scheduler.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="content">
         <div class="container-fluid">
-            <div class="col-md-12">
+            <div class="col-md-8">
                 <div class="card">
                     <div class="card-header" data-background-color="purple">
                         <h4 class="title">Interview Scheduler</h4>
@@ -14,9 +14,17 @@
                     </div>
                     <div class="card-content">
                         <div class="row">
-                            <div class="col-md-12">
+                            <div class="col-md-6 col-md-offset-3">
+                                {% block flash %}
+                                  {{ super() }}
+                                {% endblock %}
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="row">
                                 {% if step == 1 %}
-                                <form method="POST" action="{{ url_for('admin.interviewscheduler', step=step+1) }}">
+                                <form method="POST" action="{{ url_for('admin.interviewscheduler', step=step) }}">
+                                    {{ form.hidden_tag() }}
                                     <div class="form-group label-floating">
                                         {{ form.dates.label(class='black_label') }}
                                         {{ form.dates(class='form-control') }}
@@ -27,14 +35,17 @@
                                     </div>
                                     <div class="form-group label-floating">
                                         {{ form.submit(class='btn btn-primary pull-right') }}
+                                    <div class="clearfix"></div>
                                     </div>
                                 </form>
                                 {% elif step == 2 %}
-                                <form method="POST" action="{{ url_for('admin.interviewscheduler', step=step+1) }}">
+                                <form method="POST" action="{{ url_for('admin.interviewscheduler', step=step) }}">
+                                    {{ form.hidden_tag() }}
                                     {{ form.submit(class='btn btn-primary pull-right') }}
                                 </form>
                                 {% elif step == 3 %}
-                                <form method="POST" action="{{ url_for('admin.interviewscheduler', step=step+1) }}">
+                                <form method="POST" action="{{ url_for('admin.interviewscheduler', step=step) }}">
+                                    {{ form.hidden_tag() }}
                                     {{ form.submit(class='btn btn-primary pull-right') }}
                                 </form>
                                 {% endif %}
@@ -42,6 +53,16 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card card-profile">
+                <div class="content">
+                    <h6 class="category text-gray">Important Notes</h6>
+                    <div class="card-content">
+                        <p>All interviews will only run from 8:00 AM to 8:00 PM. Anything beyond that is unreasonable.</p>
+                    </div>
+                </div>
+            </div>
             </div>
         </div>
     </div>
