--- a/app/admin/templates/applications_applicant.html
+++ b/app/admin/templates/applications_applicant.html
@@ -108,6 +108,13 @@
                     <p class="category">Accept or reject candidates. Accepted candidates will continue on to the next stage. Please see the help page for details about status meanings.</p>
                 </div>
                 <div class="card-content">
+                    <div class="row">
+                        <div class="col-md-6 col-md-offset-3">
+                            {% block flash %}
+                              {{ super() }}
+                            {% endblock %}
+                        </div>
+                    </div>
                     <form method="POST" action="{{ url_for('admin.applications_applicant', id=applicant.user_id) }}">
                         {{ form.hidden_tag() }}
                         {{ form.submit(class='btn btn-danger pull-right') }}
