Removed pointless class arguments

--- a/app/admin/templates/applications_applicant.html
+++ b/app/admin/templates/applications_applicant.html
@@ -120,12 +120,12 @@
                         {{ form.submit(class='btn btn-danger pull-right') }}
                         <ul>
                             <li>
-                                {{ form.accept(class='') }}
-                                {{ form.accept.label(class='') }}
+                                {{ form.accept }}
+                                {{ form.accept.label }}
                             </li>
                             <li>
-                                {{ form.reject(class='') }}
-                                {{ form.reject.label(class='') }}
+                                {{ form.reject }}
+                                {{ form.reject.label }}
                             </li>
                         </ul>
                     </form>
