--- a/app/admin/templates/applications_applicant.html
+++ b/app/admin/templates/applications_applicant.html
@@ -6,9 +6,12 @@
     <div class="content">
         <div class="container-fluid">
             <div class="card">
-                {% if 'REJECTION' in applicant.status %}
+                {% if ( (applicant.status == APPLICANT_STATUS[1]) or
+                        (applicant.status == APPLICANT_STATUS[3]) or
+                        (applicant.status == APPLICANT_STATUS[5]) )
+                %}
                     <div class="card-header" data-background-color="red">
-                {% elif 'ACCEPTANCE' in applicant.status %}
+                {% elif applicant.status == APPLICANT_STATUS[6] %}
                     <div class="card-header" data-background-color="green">
                 {% else %}
                     <div class="card-header" data-background-color="orange">
@@ -77,9 +80,12 @@
         </div>
         <div class="container-fluid">
             <div class="card">
-                {% if 'REJECTION' in applicant.status %}
+                {% if ( (applicant.status == APPLICANT_STATUS[1]) or
+                        (applicant.status == APPLICANT_STATUS[3]) or
+                        (applicant.status == APPLICANT_STATUS[5]) )
+                %}
                     <div class="card-header" data-background-color="red">
-                {% elif 'ACCEPTANCE' in applicant.status %}
+                {% elif applicant.status == APPLICANT_STATUS[6] %}
                     <div class="card-header" data-background-color="green">
                 {% else %}
                     <div class="card-header" data-background-color="orange">
