--- a/app/user/templates/user_dashboard.html
+++ b/app/user/templates/user_dashboard.html
@@ -6,9 +6,12 @@
     <div class="row">
         <div class="col-md-6">
             <div class="card">
-                {% if 'REJECTION' in applicant.status %}
+                {% if ( (applicant.status == APPLICANT_STATUS[1]) or
+                        (applicant.status == APPLICANT_STATUS[3]) or
+                        (applicant.status == APPLICANT_STATUS[5]) )
+                %}
                     <div class="card-header" data-background-color="red">
-                {% elif 'ACCEPTANCE' in applicant.status %}
+                {% elif applicant.status == APPLICANT_STATUS[6] %}
                     <div class="card-header" data-background-color="green">
                 {% else %}
                     <div class="card-header" data-background-color="orange">
@@ -92,12 +95,15 @@
                         <div class="card-content">
                             <p class="category">Final Decision</p>
                             <h3 class="title">
-                                {% if 'REJECTION' in applicant.status %}
+                                {% if ( (applicant.status == APPLICANT_STATUS[1]) or
+                                        (applicant.status == APPLICANT_STATUS[3]) or
+                                        (applicant.status == APPLICANT_STATUS[5]) )
+                                %}
                                     Rejected
-                                {% elif 'ACCEPTANCE' in applicant.status %}
+                                {% elif applicant.status == APPLICANT_STATUS[6] %}
                                     Accepted
                                 {% else %}
-                                    Not yet available
+                                    Not Available Yet
                                 {% endif %}
                             </h3>
                         </div>
