--- a/app/admin/templates/interview_scheduler.html
+++ b/app/admin/templates/interview_scheduler.html
@@ -34,6 +34,14 @@
                                         {{ form.length()}}
                                     </div>
                                     <div class="form-group label-floating">
+                                        {{ form.committee_size.label }}
+                                        {{ form.committee_size }}
+                                    </div>
+                                    <div class="form-group label-floating">
+                                        {{ form.match_position.label }}
+                                        {{ form.match_position }}
+                                    </div>
+                                    <div class="form-group label-floating">
                                         {{ form.submit(class='btn btn-primary pull-right') }}
                                     <div class="clearfix"></div>
                                     </div>
