Renamed interview scheduler manual to help and added to user dashboard

--- a/app/user/templates/base_user.html
+++ b/app/user/templates/base_user.html
@@ -38,6 +38,9 @@
                                 <p>Interviews</p>
                             </a>
                         </li>
+                        <li class="page-scroll">
+                            <a href="/static/files/interview_scheduler_help.pdf">Help</a>
+                        </li>
                     </ul>
                 </div>
             </div>
