Fixed icon with help on user dashboard

--- a/app/user/templates/base_user.html
+++ b/app/user/templates/base_user.html
@@ -38,8 +38,11 @@
                                 <p>Interviews</p>
                             </a>
                         </li>
-                        <li class="page-scroll">
-                            <a href="/static/files/interview_scheduler_help.pdf">Help</a>
+                        <li>
+                            <a href="/static/files/interview_scheduler_help.pdf">
+                                <i class="fa fa-question-circle" aria-hidden="true"></i>
+                                <p>Help</p>
+                            </a>
                         </li>
                     </ul>
                 </div>
