--- a/app/user/templates/user_interviews.html
+++ b/app/user/templates/user_interviews.html
@@ -12,46 +12,12 @@
                     </p>
                 </div>
                 <div class="card-content table-responsive">
-                    <table class="table table-hover">
-                        <tbody>
-                            <tr>
-                                <td>First Name</td>
-                                <td>{{ applicant.first_name }}</td>
-                            </tr>
-                            <tr>
-                                <td>Last Name</td>
-                                <td>{{ applicant.last_name }}</td>
-                            </tr>
-                            <tr>
-                                <td>Email</td>
-                                <td>{{ applicant.email }}</td>
-                            </tr>
-                            <tr>
-                                <td>Phone Number</td>
-                                <td>{{ applicant.phone_number }}</td>
-                            </tr>
-                            <tr>
-                                <td>Position Applied For</td>
-                                <td>{{ applicant.position }}</td>
-                            </tr>
-                            <tr>
-                                <td>Year</td>
-                                <td>{{ applicant.year }}</td>
-                            </tr>
-                            <tr>
-                                <td>Expected Graduation Date</td>
-                                <td>{{ applicant.expected_graduation_date.strftime('%Y-%m-%d') }}</td>
-                            </tr>
-                            <tr>
-                                <td>Semesters On Campus</td>
-                                <td>{{ applicant.on_campus }}</td>
-                            </tr>
-                            <tr>
-                                <td>Application Status</td>
-                                <td>{{ applicant.status }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h5>This page is still currently under development!</h5>
+                            <h5>We'll send you an email with our availability so you can sign up :)</h5>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
